--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -53,10 +53,12 @@
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-core</artifactId>
+	   <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
-           <artifactId>arquillian-container-test-api</artifactId>    
+           <artifactId>arquillian-container-test-api</artifactId>
+	   <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
