--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -52,13 +52,18 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-core</artifactId>
-	   <scope>test</scope>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-container-test-api</artifactId>
-	   <scope>test</scope>
+           <scope>test</scope>
+        </dependency>
+        <dependency>
+           <groupId>org.jboss.shrinkwrap.resolver</groupId>
+           <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+           <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
