--- a/api/pom.xml
+++ b/api/pom.xml
@@ -31,8 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
-            <artifactId>seam-solder</artifactId>
-            <scope>compile</scope>
+            <artifactId>seam-solder-api</artifactId>
         </dependency>
     </dependencies>
 
