--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -8,7 +8,10 @@
         <version>3.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    <properties>
+        <el-api.version>2.2</el-api.version>
+        <hornetq.version>2.2.5.Final</hornetq.version>
+    </properties>
     <artifactId>seam-jms</artifactId>
     <packaging>jar</packaging>
 
@@ -47,18 +50,17 @@
         <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-6.0</artifactId>
-            <version>1.0.0.Final</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-core</artifactId>
-	   <scope>test</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
-           <groupId>org.jboss.arquillian.container</groupId>
-           <artifactId>arquillian-container-test-api</artifactId>
-	   <scope>test</scope>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-container-test-api</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -74,8 +76,17 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder-logging</artifactId>
+            <version>3.1.0.Beta1</version>
         </dependency>
     </dependencies>
 
@@ -108,6 +119,62 @@
             </build>
         </profile>
         <profile>
+            <id>weld-hornetq-emb</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.el</groupId>
+                    <artifactId>el-api</artifactId>
+                    <version>${el-api.version}</version>
+                </dependency>
+		
+                <dependency>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.hornetq</groupId>
+                    <artifactId>hornetq-jms</artifactId>
+                    <version>${hornetq.version}</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.hornetq</groupId>
+                    <artifactId>hornetq-jms-client</artifactId>
+                    <version>${hornetq.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-core</artifactId>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-api</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                
+                <dependency>
+                    <groupId>commons-collections</groupId>
+                    <artifactId>commons-collections</artifactId>
+                    <version>3.2.1</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>jbossas-remote-6</id>
             <dependencies>
                 <dependency>
@@ -137,13 +204,11 @@
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
-                    <version>1.0.0.Alpha5</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.glassfish.extras</groupId>
                     <artifactId>glassfish-embedded-all</artifactId>
-                    <version>3.1</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -160,9 +225,6 @@
         </profile>
         <profile>
             <id>jbossas-managed-6</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
