--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,8 +30,8 @@
 	    <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.seam.solder</groupId>
-            <artifactId>seam-solder-api</artifactId>
+            <groupId>org.jboss.solder</groupId>
+            <artifactId>solder-api</artifactId>
         </dependency>
     </dependencies>
 
