--- a/examples/jms-statuswatcher/pom.xml
+++ b/examples/jms-statuswatcher/pom.xml
@@ -30,19 +30,14 @@
       </dependency>
       
       <dependency>
-        <groupId>org.jboss.seam.solder</groupId>
-        <artifactId>seam-solder</artifactId>
+        <groupId>org.jboss.solder</groupId>
+        <artifactId>solder-impl</artifactId>
         <scope>compile</scope>
       </dependency>
 
-     <dependency>
-         <groupId>org.jboss.seam.servlet</groupId>
-         <artifactId>seam-servlet</artifactId>
-      </dependency>
-
       <dependency>
-         <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder</artifactId>
+         <groupId>org.jboss.solder</groupId>
+         <artifactId>solder-api</artifactId>
          <scope>compile</scope>
       </dependency>
 
