--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 <!--	<module>modules/hornetq</module>
 	<module>modules/openmq</module> 
 	<module>modules/activemq</module> -->
-        <!--<module>testsuite</module>-->
+        <module>testsuite</module>
     </modules>
    
     <dependencyManagement>
