--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.seam.jms</groupId>
