--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>solder-impl</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>org.jboss.spec.javax.jms</groupId>
 			<artifactId>jboss-jms-api_1.1_spec</artifactId>
