--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -6,7 +6,7 @@
       <groupId>org.jboss.seam.jms</groupId>
       <artifactId>seam-jms-parent</artifactId>
       <version>3.1.0-SNAPSHOT</version>
-      <relativePath>../../pom.xml</relativePath>
+      <relativePath>../pom.xml</relativePath>
    </parent>
 
    <artifactId>seam-jms-reference-guide</artifactId>
