--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jboss.seam.jms</groupId>
 		<artifactId>seam-jms-parent</artifactId>
-		<version>3.1.0.Beta5</version>
+		<version>3.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
