--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -146,6 +146,34 @@
 		</profile>
 
 		<profile>
+			<id>jbossas-managed-6</id>
+			<activation>
+				<property>
+					<name>arquillian</name>
+					<value>jbossas-managed-6</value>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.seam.test</groupId>
+					<artifactId>jbossas-managed-6</artifactId>
+					<type>pom</type>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+					</testResource>
+					<testResource>
+						<directory>src/test/resources-jbossas6</directory>
+					</testResource>
+				</testResources>
+			</build>
+		</profile>
+
+		<profile>
 			<id>jbossas-remote-7</id>
 			<activation>
 				<property>
