--- a/examples/jms-statuswatcher/pom.xml
+++ b/examples/jms-statuswatcher/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.seam.jms</groupId>
         <artifactId>seam-jms-parent</artifactId>
-        <version>3.1.0.CR1</version>
+        <version>3.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
