--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -70,9 +70,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
+<!--                <configuration>
                     <skip>true</skip>
-                </configuration>
+                </configuration> -->
             </plugin>
         </plugins>
     </build>
@@ -90,7 +90,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <skip>true</skip>
+<!--                            <skip>true</skip> -->
                             <systemProperties>
                                 <arquillian.launch>${arquillian}</arquillian.launch>
                                 <arquillian>${arquillian}</arquillian>
