--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.seam</groupId>
         <artifactId>seam-parent</artifactId>
-        <version>18</version>
+        <version>19</version>
     </parent>
 
     <groupId>org.jboss.seam.jms</groupId>
@@ -17,7 +17,7 @@
     <url>http://sfwk.org/Seam3/JMS</url>
 
     <properties>
-        <seam.version>3.1.0.CR1</seam.version>
+        <seam.version>3.1.0.Final</seam.version>
         <emma.version>2.0.5312</emma.version>
     </properties>
 
@@ -27,7 +27,7 @@
 <!--	<module>modules/hornetq</module>
 	<module>modules/openmq</module> 
 	<module>modules/activemq</module> -->
-        <module>testsuite</module>
+        <!--<module>testsuite</module>-->
     </modules>
    
     <dependencyManagement>
